fix bill